--- a/assets/less/elements.less
+++ b/assets/less/elements.less
@@ -14,6 +14,7 @@ article img {
 	border-width: 0; 
 	vertical-align: middle; 
 	-ms-interpolation-mode: bicubic; 
+    margin-bottom: 1.625rem;
 }
 svg:not(:root) {
 		overflow: hidden; 
