Finished article on spherical projection in GLSL

--- a/assets/less/elements.less
+++ b/assets/less/elements.less
@@ -15,6 +15,7 @@ article img {
 	vertical-align: middle; 
 	-ms-interpolation-mode: bicubic; 
     margin-bottom: 1.625rem;
+    margin-top: 1.625rem;
 }
 svg:not(:root) {
 		overflow: hidden; 
