--- a/_layouts/realizations.html
+++ b/_layouts/realizations.html
@@ -30,17 +30,20 @@
           <img src="{{ site.url }}/images/{{ work.image }}" alt="{{ work.description }} feature image">
           {% if work.image-credit %}<span class="image-credit">Photo Credit: <a href="{{ work.image-credit-link }}">{{ work.image-credit }}</a></span>{% endif %}
           <p class="image-sequence-description">
+            <b><a href={{ work.link }}>{{ work.name }}</a></b><br><br>
             {{ work.description }}
           </p>
         </div>
       {% endfor %}
-  </div>
 
-  <div class=works>
     <h1>Articles</h1>
       {% for article in site.data.articles %}
         <div class=article-citation>
-          <a href={{ article.link }}>{{ article.authors }}. {{ article.title }}, in <i>{{ article.publication }}</i> ({{ article.date }})</a><br>
+          {% if article.link %}
+            <a href={{ article.link }}>{{ article.authors }}. {{ article.title }}, in <i>{{ article.publication }}</i> ({{ article.date }})</a><br>
+          {% else %}
+            {{ article.authors }}. {{ article.title }}, in <i>{{ article.publication }}</i> ({{ article.date }})<br>
+          {% endif %}
         </div>
       {% endfor %}
   </div>
