--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -314,12 +314,13 @@ body {
 	}
 }
 .image-sequence-description {
+    font-family: "PT Sans Narrow",sans-serif;
     opacity: 0;
     position: absolute;
     top: 0;
     width: 100%;
     height: 100%;
-    background: rgba(127, 127, 127, 0.6);
+    background: rgba(127, 140, 140, 0.7);
     color: #fff;
 }
 .image-sequence:hover .image-sequence-description {
