--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -315,13 +315,14 @@ body {
 }
 .image-sequence-description {
     font-family: "PT Sans Narrow",sans-serif;
+    overflow: hidden;
     opacity: 0;
     position: absolute;
     top: 0;
     width: 100%;
     height: 100%;
-    background: rgba(127, 140, 140, 0.7);
-    color: #fff;
+    background: rgba(255, 255, 255, 0.7);
+    color: #111;
 }
 .image-sequence:hover .image-sequence-description {
     visibility: visible;
@@ -450,7 +451,7 @@ body {
 .works {
     display: inline;
     float: left;
-    width: 70%;
+    width: 60%;
 }
 .toc {
 	display: none;
