Project images act now as links

--- a/_layouts/realizations.html
+++ b/_layouts/realizations.html
@@ -37,15 +37,15 @@
 
     <h1>Projects</h1>
       {% for work in site.data.works %}
-        <div class="image-sequence">
+        <a href={{ work.link }} class="image-sequence">
           <img src="{{ site.url }}/images/{{ work.image }}" alt="{{ work.description }} feature image">
-          {% if work.image-credit %}<span class="image-credit">Photo Credit: <a href="{{ work.image-credit-link }}">{{ work.image-credit }}</a></span>{% endif %}
+          {% if work.image-credit %}<span class="image-credit">Photo Credit: {{ work.image-credit }}</span>{% endif %}
           <p class="image-sequence-description">
             <br>
-            <font size=+1><b><a href={{ work.link }}>{{ work.name }}</a></b></font> ({{ work.date }})<br>
+            <font size=+1><b>{{ work.name }}</b></font> ({{ work.date }})<br>
             {{ work.description }}
           </p>
-        </div>
+        </a>
       {% endfor %}
   </div>
 </div><!-- /#main -->
