--- a/_layouts/realizations.html
+++ b/_layouts/realizations.html
@@ -50,6 +50,12 @@
   </div>
 </div><!-- /#main -->
 
+<div class="footer-wrap">
+  <footer>
+    {% include _footer.html %}
+  </footer>
+</div><!-- /.footer-wrap -->
+
 {% include _scripts.html %}	        
 
 </body>
