--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -313,18 +313,24 @@ body {
 		-ms-interpolation-mode: bicubic;
 	}
 }
+.image-sequence-box {
+    opacity: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
 .image-sequence-description {
     font-family: "PT Sans Narrow",sans-serif;
     overflow: hidden;
-    opacity: 0;
     position: absolute;
     top: 0;
-    width: 100%;
+    padding: 10px;
+    width: auto;
     height: 100%;
     background: rgba(255, 255, 255, 0.7);
     color: #111;
 }
-.image-sequence:hover .image-sequence-description {
+.image-sequence:hover .image-sequence-box {
     visibility: visible;
     opacity: 1;
 }
