--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -49,7 +49,8 @@
 <!-- Modernizr -->
 <script src="{{ site.url }}/assets/js/vendor/modernizr-2.7.1.custom.min.js"></script>
 <script src="{{ site.url }}/assets/js/vendor/three.min.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="{{ site.url }}/assets/js/vendor/jquery-1.9.1.min.js"></script>
+<!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
 
 <!-- Icons -->
 <!-- 16x16 -->
