--- a/_layouts/realizations.html
+++ b/_layouts/realizations.html
@@ -32,6 +32,11 @@
   </div>
 
   <div class=works>
+    <h1>Softwares (some of them)</h1>
+      {% for software in site.data.softwares %}
+        <b><a href={{ software.link }}>{{ software.name }}</a></b> - {{ software.description }}<br><br>
+      {% endfor %}
+
     <h1>Publications</h1>
       {% for article in site.data.articles %}
         <div class=article-citation>
